--- a/src/static_version/index.html
+++ b/src/static_version/index.html
@@ -1,4 +1,13 @@
+<!----- 
 
+This is from Bodi - more info about the project & project license can be found at github.com/MarketingPipeline/Bodi 
+
+This project was originally started by Jared Van Valkengoed
+
+A special reminder to Jayce, you can do anything you set your mind too. 
+
+PLEASE DO NOT REMOVE THIS NOTICE. 
+-------->
 <head>
     <script src="https://kit.fontawesome.com/d5fba335cd.js" crossorigin="anonymous"></script>
   
