Updated demo :paintbrush:

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,9 +15,11 @@ PLEASE DO NOT REMOVE THIS NOTICE.
     <LINK href="https://unpkg.com/swiper/swiper-bundle.min.css" rel="stylesheet" type="text/css"> 
   
       
-     <script src="assets/bodi.js" defer></script>
+     <script src="assets/bodi.min.js" defer></script>
  
-    <LINK href="assets/style.css" rel="stylesheet" type="text/css">
+	    <!-- Uses the Estuary Design Framework ----> 
+       <!--- Source code for Estuary - https://github.com/MarketingPipeline/Estuary ----> 
+    <LINK href="assets/estuary.css" rel="stylesheet" type="text/css">
   <title> Bodi Demo - Created by Jared Van Valkengoed </title>
 </head>
 <div class="clock">
