Updated CSS path :wrench:

--- a/demo/index.html
+++ b/demo/index.html
@@ -19,7 +19,7 @@ PLEASE DO NOT REMOVE THIS NOTICE.
  
 	    <!-- Uses the Estuary Design Framework ----> 
        <!--- Source code for Estuary - https://github.com/MarketingPipeline/Estuary ----> 
-    <LINK href="assets/estuary.min.css" rel="stylesheet" type="text/css">
+    <LINK href="assets/estuary.css" rel="stylesheet" type="text/css">
   <title> Bodi Demo - Created by Jared Van Valkengoed </title>
 </head>
 <div class="clock">
