--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,7 @@ PLEASE DO NOT REMOVE THIS NOTICE.
     <LINK href="https://unpkg.com/swiper/swiper-bundle.min.css" rel="stylesheet" type="text/css"> 
   
       
-     <script src="assets/bodi.min.js" defer></script>
+   
  
 	    <!-- Uses the Estuary Design Framework ----> 
        <!--- Source code for Estuary - https://github.com/MarketingPipeline/Estuary ----> 
@@ -1802,4 +1802,4 @@ ever encountered. Harry also can't help stealing glances with the beautiful Cho 
         </div>
     </header>
   </section>    
-       
+         <script src="assets/bodi.js"></script>
