--- a/demo/index.html
+++ b/demo/index.html
@@ -1254,4 +1254,4 @@ ever encountered. Harry also can't help stealing glances with the beautiful Cho 
         </div>
     </header>
   </section>    
-         <script src="assets/bodi.js"></script>
+         <script src="assets/bodi.js" defer></script>
