Updated demo :wrench:

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,9 +14,11 @@ PLEASE DO NOT REMOVE THIS NOTICE.
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js" crossorigin="anonymous"></script>
     <LINK href="https://unpkg.com/swiper/swiper-bundle.min.css" rel="stylesheet" type="text/css"> 
    <script src="assets/bodi.js" defer></script>
- 
-    <LINK href="assets/style.css" rel="stylesheet" type="text/css">
-  <title> Kodi UI </title>
+
+	    <!-- Uses the Estuary Design Framework ----> 
+       <!--- Source code for Estuary - https://github.com/MarketingPipeline/Estuary ----> 
+    <LINK href="assets/estuary.css" rel="stylesheet" type="text/css">
+  <title> Bodi Demo - Created by Jared Van Valkengoed </title>
 </head>
 <div class="clock">
   <h1 id="Clock"></h1>
